envs/develop/1.network/igw.tf
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.wanrun.id

  tags = {
    "Name" = "${var.service_name}-${var.env}-igw"
  }
}
