envs/develop/1.network/vpc.tf
resource "aws_vpc" "wanrun" {
  cidr_block           = var.vpc_cidr
  enable_dns_hostnames = true
  enable_dns_support   = true
  tags = {
    Name = "${var.service_name}-${var.env}-vpc"
  }
}
